--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@ function checkPassword() {
     springScreen.style.display = "flex";
 
     // Crear mensaje
-    const msg = document.createElement("h1");
+    const msg = document.createElement("h4");
     msg.id = "springMessage";
-    msg.textContent = "⭐☀️¡Feliz Primavera, mi sol cuántico, que tus días se llenen de magia, brillo y armonia!☀️⭐";
+    msg.textContent = "⭐¡Feliz Primavera, mi sol cuántico, que tus días se llenen de magia, brillo y armonia!⭐";
     springScreen.appendChild(msg);
 
     // Forzar animación
@@ -201,4 +201,5 @@ function startFlowers(canvas) {
 
 </body>
 </html>
+
 
